--- a/frontend/src/Styles/Hox.css
+++ b/frontend/src/Styles/Hox.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Jaini+Purva&display=swap');
+
 :root{
-    --p:white;
-    --s:rgb(0, 162, 255);
+    --p:black;
+    --s:red;
     --t:rgb(5, 225, 148);
     --b:rgb(227, 230, 230);
+    --t:white;
+    --font:"Jaini Purva", system-ui;
 }
+
 
 /* 
     CONTENT
@@ -31,6 +36,8 @@
 }
 
 .Hox-Button2{
+    width:100px;
+    text-align: center;
     color: var(--s);
     background-color: var(--p);
     border: 2px solid var(--s);
@@ -39,6 +46,7 @@
     font-size: 12pt;
     cursor: pointer;
     transition: all 0.6s ease;
+    font-family: var(--font);
 }
 .Hox-Button2:hover{
     color: var(--p);
@@ -225,6 +233,7 @@
 /* 3. NAVBAR */
 
 .Hox-Nav1{
+    color:var(--t);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -245,7 +254,7 @@
 }
 .Hox-Nav1-R a{
     text-decoration: none;
-    color: black;
+    color:var(--t);
     transition: all 0.3s ease;
 }
 .Hox-Nav1-R a:hover{
@@ -253,6 +262,7 @@
 }
 
 .Hox-Nav2{
+    color:var(--t);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -272,11 +282,18 @@
     justify-content: space-around;
 }
 .Hox-Nav2-C a{
+    color:var(--t);
     text-decoration: none;
-    color: black;
     transition: all 0.3s ease;
 }
-.Hox-Nav2-C  a:hover{
+.Hox-Nav2-C p{
+    color:var(--t);
+    font-size: 20pt;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    font-family: var(--font);
+}
+.Hox-Nav2-C  a:hover,.Hox-Nav2-C  p:hover{
     color:var(--s);
 }
 
