--- a/frontend/src/Styles/CamApp.css
+++ b/frontend/src/Styles/CamApp.css
@@ -40,3 +40,11 @@
     flex-direction: column;
     justify-content: center;
 }
+
+
+
+@media screen and (max-width:1000px) {
+    .CA-Cont{
+        flex-direction: column;
+    }
+}
